--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>mical</title>
+      <title>SAYA FADIL</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -36,17 +36,24 @@
          <div class="loader"><img src="images/loading.gif" alt="#" /></div>
       </div>
       <!-- end loader -->
+   </div>
+   <div class="col-sm-col-xl-6 col-lg-6 col-md-6 col-sm-12">
+      <ul class="social_icon">
+
+         <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+      </ul>
+   </div>
       <!-- header -->
       <header>
          <!-- header inner -->
          <div class="header">
             <div class="container-fluid">
                <div class="row">
-                  <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
+                  <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col logo_section">
                      <div class="full">
                         <div class="center-desk">
                            <div class="logo">
-                              <a href="index.html"><img src="images/logo.png" alt="#" /></a>
+                              <a href="index.html"><img src="IMG-20220917-WA0061.jpg" alt="#" /></a>
                            </div>
                         </div>
                      </div>
@@ -104,15 +111,15 @@
                         <div class="row">
                            <div class="col-md-6">
                               <div class="text-bg">
-                                 <h1>HAI GUYSSS</h1>
-                                 <span>car repair services</span>
-                                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, </p>
+                                 <h1>Hai saya Fadil</h1>
+                                 <span>DISINI HANYA UNTUK BIODATA SAYA</span>
+                                 <p> Sebenernya saya menunggu tugas kuliah membuat web ,tapi karena tugasnya mungkin masih lama jadi saya bikin ini hanya iseng aja </p>
                                  <a href="#">More Info </a> <a href="#">Contact Us</a>
                               </div>
                            </div>
-                           <div class="col-md-6">
+                           <div class="col-md-4">
                               <div class="text_img">
-                                 <figure><img src="images/car.png" alt="#"/></figure>
+                                 <figure><img src="IMG-20220917-WA0064.jpg" alt="#"/></figure>
                               </div>
                            </div>
                         </div>
@@ -125,15 +132,15 @@
                         <div class="row">
                            <div class="col-md-6">
                               <div class="text-bg">
-                                 <h1>Welcome</h1>
-                                 <span>car repair services</span>
-                                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, </p>
+                                 <h1>Hai saya Fadil</h1>
+                                 <span>DISINI HANYA UNTUK BIODATA SAYA</span>
+                                 <p>Sebenernya saya menunggu tugas kuliah membuat web ,tapi karena tugasnya mungkin masih lama jadi saya bikin ini hanya iseng aja </p>
                                  <a href="#">More Info </a> <a href="#">Contact Us</a>
                               </div>
                            </div>
-                           <div class="col-md-6">
+                           <div class="col-md-4">
                               <div class="text_img">
-                                 <figure><img src="images/car.png" alt="#"/></figure>
+                                 <figure><img src="IMG-20220917-WA0064.jpg" alt="#"/></figure>
                               </div>
                            </div>
                         </div>
@@ -146,15 +153,15 @@
                         <div class="row">
                            <div class="col-md-6">
                               <div class="text-bg">
-                                 <h1>Welcome</h1>
-                                 <span>car repair services</span>
-                                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, </p>
+                                 <h1>Hai saya Fadil</h1>
+                                 <span>DISINI HANYA UNTUK BIODATA SAYA</span>
+                                 <p>Sebenernya saya menunggu tugas kuliah membuat web ,tapi karena tugasnya mungkin masih lama jadi saya bikin ini hanya iseng aja  </p>
                                  <a href="#">More Info </a> <a href="#">Contact Us</a>
                               </div>
                            </div>
-                           <div class="col-md-6">
+                           <div class="col-md-4">
                               <div class="text_img">
-                                 <figure><img src="images/car.png" alt="#"/></figure>
+                                 <figure><img src="IMG-20220917-WA0064.jpg" alt="#"/></figure>
                               </div>
                            </div>
                         </div>
@@ -171,42 +178,13 @@
          </div>
       </section>
       <!-- end banner -->
-      <!-- three_box -->
-      <div class="three_box">
-         <div class="container">
-            <div class="row">
-               <div class="col-md-4">
-                  <div class="box_text">
-                     <h3>AUTO DIAGNOSE</h3>
-                     <i><img src="images/thr.png" alt="#"/></i>
-                     <p>ipsum dolor sit amet, consectetur adipiscing elit, sed d veniam, adipiscing elit, sed d veniam</p>
-                  </div>
-               </div>
-               <div class="col-md-4">
-                  <div class="box_text">
-                     <h3>AUTO DIAGNOSE</h3>
-                     <i><img src="images/thr1.png" alt="#"/></i>
-                     <p>ipsum dolor sit amet, consectetur adipiscing elit, sed d veniam, adipiscing elit, sed d veniam</p>
-                  </div>
-               </div>
-               <div class="col-md-4">
-                  <div class="box_text">
-                     <h3>AUTO DIAGNOSE</h3>
-                     <i><img src="images/thr2.png" alt="#"/></i>
-                     <p>ipsum dolor sit amet, consectetur adipiscing elit, sed d veniam, adipiscing elit, sed d veniam</p>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-      <!-- three_box -->
       <!-- about -->
       <div  class="about">
          <div class="container">
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <h2>About Our Car Service </h2>
+                     <h2>FADILLAH WAHYU NUGRAHA </h2>
                   </div>
                </div>
             </div>
@@ -232,168 +210,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <h2>What We Do</h2>
-                     <p>It is a long established fact that a reader will be distracted by the </p>
-                  </div>
-               </div>
-            </div>
-            <div class="row">
-               <div class="col-md-10 offset-md-1">
-                  <div class="row">
-                     <div class="col-md-6 margin_bottom">
-                        <div class="work">
-                           <figure><img src="images/img1.png" alt="#" /></figure>
-                        </div>
-                        <div class="work_text">
-                           <h3>Quick repair<br><span class="blu">Total Service</span></h3>
-                        </div>
-                     </div>
-                     <div class="col-md-6 margin_bottom">
-                        <div class="work">
-                           <figure><img src="images/img2.png" alt="#" /></figure>
-                        </div>
-                        <div class="work_text">
-                           <h3>Quick repair<br><span class="blu">Total Service</span></h3>
-                        </div>
-                     </div>
-                     <div class="col-md-6 margin_bottom">
-                        <div class="work">
-                           <figure><img src="images/img3.png" alt="#" /></figure>
-                        </div>
-                        <div class="work_text">
-                           <h3>Quick repair<br> <span class="blu">Total Service</span></h3>
-                        </div>
-                     </div>
-                     <div class="col-md-6 margin_bottom">
-                        <div class="work">
-                           <figure><img src="images/img4.png" alt="#" /></figure>
-                        </div>
-                        <div class="work_text">
-                           <h3>Quick repair<br><span class="blu">Total Service</span></h3>
-                        </div>
-                     </div>
-                  </div>
-                  <a class="read_more" href="#">See More</a>
-               </div>
-            </div>
-         </div>
-      </div>
-      <!-- end wedo  section -->
-      <!-- testimonial -->
-      <div class="testimonial">
-         <div class="container">
-            <div class="row">
-               <div class="col-md-12">
-                  <div class="titlepage">
-                     <h2>Testimonial</h2>
-                     <p>It is a long established fact that a reader will be distracted by the </p>
-                  </div>
-               </div>
-            </div>
-            <div class="row">
-               <div class="col-md-12">
-                  <div id="myCarousel" class="carousel slide testimonial_Carousel " data-ride="carousel">
-                     <ol class="carousel-indicators">
-                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#myCarousel" data-slide-to="1"></li>
-                        <li data-target="#myCarousel" data-slide-to="2"></li>
-                     </ol>
-                     <div class="carousel-inner">
-                        <div class="carousel-item active">
-                           <div class="container">
-                              <div class="carousel-caption ">
-                                 <div class="row">
-                                    <div class="col-md-6 margin_boot">
-                                       <div class="test_box">
-                                          <i><img src="images/tes.jpg" alt="#"/></i>
-                                          <h4>JCKOLO</h4>
-                                          <span>(It is a long )</span>
-                                          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as </p>
-                                       </div>
-                                    </div>
-                                    <div class="col-md-6 margin_boot">
-                                       <div class="test_box">
-                                          <i><img src="images/tes1.jpg" alt="#"/></i>
-                                          <h4>ROCOYO</h4>
-                                          <span>(It is a long )</span>
-                                          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as </p>
-                                       </div>
-                                    </div>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="carousel-item">
-                           <div class="container">
-                              <div class="carousel-caption">
-                                 <div class="row">
-                                    <div class="col-md-6 margin_boot">
-                                       <div class="test_box">
-                                          <i><img src="images/tes.jpg" alt="#"/></i>
-                                          <h4>JCKOLO</h4>
-                                          <span>(It is a long )</span>
-                                          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as </p>
-                                       </div>
-                                    </div>
-                                    <div class="col-md-6 margin_boot">
-                                       <div class="test_box">
-                                          <i><img src="images/tes1.jpg" alt="#"/></i>
-                                          <h4>ROCOYO</h4>
-                                          <span>(It is a long )</span>
-                                          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as </p>
-                                       </div>
-                                    </div>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="carousel-item">
-                           <div class="container">
-                              <div class="carousel-caption">
-                                 <div class="row">
-                                    <div class="col-md-6 margin_boot">
-                                       <div class="test_box">
-                                          <i><img src="images/tes.jpg" alt="#"/></i>
-                                          <h4>JCKOLO</h4>
-                                          <span>(It is a long )</span>
-                                          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as </p>
-                                       </div>
-                                    </div>
-                                    <div class="col-md-6 margin_boot">
-                                       <div class="test_box">
-                                          <i><img src="images/tes1.jpg" alt="#"/></i>
-                                          <h4>ROCOYO</h4>
-                                          <span>(It is a long )</span>
-                                          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as </p>
-                                       </div>
-                                    </div>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                     <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                     <span class="sr-only">Previous</span>
-                     </a>
-                     <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                     <span class="sr-only">Next</span>
-                     </a>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-      <!-- end testimonial -->
-      </div>
-      <!--  footer -->
-      <footer id="contact">
-         <div class="footer">
-            <div class="container">
-               <div class="row">
-                  <div class="col-md-4">
-                     <div class="titlepage">
+                 
                         <h2>Contact Us</h2>
                      </div>
                   </div>
@@ -420,16 +237,7 @@
                               <textarea class="textarea" placeholder="Message" type="type" Message="Name">Message </textarea>
                            </div>
                            <div class="col-sm-col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                              <button class="send_btn">Send</button>
-                           </div>
-                           <div class="col-sm-col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                              <ul class="social_icon">
-                                 <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                 <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                 <li><a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-                                 <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                              </ul>
-                           </div>
+                           
                         </div>
                      </form>
                   </div>
