--- a/index.html
+++ b/index.html
@@ -65,10 +65,6 @@
                               <li class="nav-item">
                                  <a class="nav-link" href="menu_music.html"target="_blank">Music</a>
                               </li>
-                            
-
-
-
                            </ul>
                         </div>
                      </nav>
@@ -98,12 +94,11 @@
                                 
                                  <p>Sebenernya saya menunggu tugas kuliah membuat web ,tapi karena tugasnya mungkin masih lama jadi saya bikin ini hanya iseng aja 
                                     . dan web ini berisi tentang diri saya dan beberapa pengetahuan yang saya pelajari di jurusan TEKNOLOGI INFORMASI🖥️ </p>
-
                               </div>
                            </div>
                            <div class="col-md-4">
                               <div class="text_img">
-                                 <figure><img src="images/IMG-20220917-WA0064.png.jpg" alt="#"/></figure>
+                                 <figure><img src="images/fotofadil.jpg" alt="#"/></figure>
                               </div>
                            </div>
                         </div>
