--- a/index.html
+++ b/index.html
@@ -107,18 +107,71 @@
                </div>
          </div>
       </section>
-      <!-- end banner -->
-      <!-- about -->
       <div  class="about">
          <div class="container">
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <h2>BIODATA PRIBADI </h2>
+                     <h2>BIODATA</h2>
                   </div>
                </div>
             </div>
-    
+            <body>
+              
+       <div class="container">
+         <div class="card kartu">
+           <div class="form-row">
+             <div class="col-md-3">
+             <div class="foto">
+               <img src="images/fotofull.jpg" alt="auto" width="auto" height="auto">
+             </div>
+             </div>
+             <div class="col-md-8 kertas-biodata">
+               <div class="biodata">
+               <table width="100%" border="0">
+           <tbody><tr>
+               <td valign="top">
+               <table border="0" width="100%" style="padding-left: 2px; padding-right: 13px;">
+                 <tbody>
+                   <tr>
+                     <td width="25%" valign="top" class="textt">Nama</td>
+                       <td width="2%">:</td>
+                       <td style="color: rgb(110, 10, 241); font-weight:bold">Fadillah Wahyu Nugraha</td>
+                   </tr>
+                 <tr>
+                     <td class="textt">Jenis Kelamin</td>
+                       <td>:</td>
+                       <td>Laki-Laki</td>
+                   </tr>
+                 <tr>
+                     <td class="textt">Tempat Lahir</td>
+                       <td>:</td>
+                       <td>Blitar ,Jawa Timur ,Indonesia</td>
+                   </tr>
+                 <tr>
+                     <td class="textt">Tanggal Lahir</td>
+                       <td>:</td>
+                       <td>27/02/2004</td>
+                   </tr>
+                 <tr>
+                     <td class="textt">Jurusan</td>
+                       <td>:</td>
+                       <td>Teknologi informasi</td>
+                   </tr>
+                 <tr>
+                     <td valign="top" class="textt">Prodi</td>
+                       <td valign="top">:</td>
+                       <td>Teknik Informatika</td>
+                   </tr>
+               </tbody></table>
+               </td>
+           </tr>
+           </tbody></table>
+         </div>
+             </div>
+           </div>
+         </div>
+      </div>
       </footer>
       <!-- end footer -->
       <!-- Javascript files-->
