--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@
                        <td>:</td>
                        <td>27/02/2004</td>
                    </tr>
+                   <tr>
+                     <td valign="top" class="textt">Status Pendidikan</td>
+                       <td valign="top">:</td>
+                       <td>Mahasiswa Politeknik Negeri Jember</td>
+                   </tr>
                  <tr>
                      <td class="textt">Jurusan</td>
                        <td>:</td>
@@ -151,6 +156,12 @@
                        <td valign="top">:</td>
                        <td>Teknik Informatika</td>
                    </tr>
+                   <tr>
+                     <td valign="top" class="textt">Sosial media</td>
+                       <td valign="top">:</td>
+                       <td> <a href="https://instagram.com/saia_fadill?igshid=YmMyMTA2M2Y="class="fa fa-instagram"> INSTAGRAM</a></td>
+                       
+                     </tr>
                </tbody></table>
                </td>
            </tr>
