--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                    <tr>
                      <td valign="top" class="textt">Sosial media</td>
                        <td valign="top">:</td>
-                       <td> <a href="https://instagram.com/saia_fadill?igshid=YmMyMTA2M2Y="class="fa fa-instagram"> INSTAGRAM</a></td>
+                       <td> <a href="https://instagram.com/saia_fadill?igshid=YmMyMTA2M2Y="class="fa fa-instagram"> -->INSTAGRAM<--</a></td>
                        
                      </tr>
                </tbody></table>
