--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>SAYA FADIL</title>
+      <title>Fadillah wahyu nugraha</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -60,7 +60,7 @@
                                  <a class="nav-link" href="index.html"> Home  </a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="menu_music.html"target="_blank">Music</a>
+                                 <a class="nav-link" href="menu_music.html"target="_blank">Materi</a>
                               </li>
                            </ul>
                         </div>
@@ -124,42 +124,42 @@
                    <tr>
                      <td width="25%" valign="top" class="textt">Nama</td>
                        <td width="2%">:</td>
-                       <td style="color: rgb(110, 10, 241); font-weight:bold">Fadillah Wahyu Nugraha</td>
+                       <td style="color: rgb(0, 0, 0); font-weight:bold">Fadillah Wahyu Nugraha</td>
                    </tr>
                  <tr>
                      <td class="textt">Jenis Kelamin</td>
                        <td>:</td>
-                       <td>Laki-Laki</td>
+                       <td style="color: rgb(0, 0, 0); font-weight:bold">Laki-Laki</td>
                    </tr>
                  <tr>
                      <td class="textt">Tempat Lahir</td>
                        <td>:</td>
-                       <td>Blitar ,Jawa Timur ,Indonesia</td>
+                       <td style="color: rgb(0, 0, 0); font-weight:bold">Blitar ,Jawa Timur ,Indonesia</td>
                    </tr>
                  <tr>
                      <td class="textt">Tanggal Lahir</td>
                        <td>:</td>
-                       <td>27/02/2004</td>
+                       <td style="color: rgb(0, 0, 0); font-weight:bold">27/02/2004</td>
                    </tr>
                    <tr>
                      <td valign="top" class="textt">Status Pendidikan</td>
                        <td valign="top">:</td>
-                       <td>Mahasiswa Politeknik Negeri Jember</td>
+                       <td style="color: rgb(0, 0, 0); font-weight:bold">Mahasiswa Politeknik Negeri Jember</td>
                    </tr>
                  <tr>
                      <td class="textt">Jurusan</td>
                        <td>:</td>
-                       <td>Teknologi informasi</td>
+                       <td style="color: rgb(0, 0, 0); font-weight:bold">Teknologi informasi</td>
                    </tr>
                  <tr>
                      <td valign="top" class="textt">Prodi</td>
                        <td valign="top">:</td>
-                       <td>Teknik Informatika</td>
+                       <td style="color: rgb(0, 0, 0); font-weight:bold">Teknik Informatika</td>
                    </tr>
                    <tr>
                      <td valign="top" class="textt">Sosial media</td>
                        <td valign="top">:</td>
-                       <td> <a href="https://instagram.com/saia_fadill?igshid=YmMyMTA2M2Y="class="fa fa-instagram"> -->INSTAGRAM<--</a></td>
+                       <td> <a href="https://instagram.com/saia_fadill?igshid=YmMyMTA2M2Y=" class="fa fa-instagram"> INSTAGRAM </a></td>
                        
                      </tr>
                </tbody></table>
