--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
                    <tr>
                      <td valign="top" class="textt">Sosial media</td>
                        <td valign="top">:</td>
-                       <td> <a href="https://instagram.com/saia_fadill?igshid=YmMyMTA2M2Y=">--> Instagram <--</a></td>
+                       <td> <a href="https://instagram.com/saia_fadill?igshid=YmMyMTA2M2Y=" class="font-weight-bolder">--> Instagram <--</a></td>
                        
                      </tr>
                       <tr>
                      <td valign="top" class="textt">       </td>
                        <td valign="top">:</td>
-                       <td> <a href="http://wa.me/‪+6289518917844">--> Whatsapp <-- </a></td>
+                       <td> <a href="http://wa.me/‪+6289518917844" class="font-weight-bolder">--> Whatsapp <-- </a></td>
                        
                      </tr>
                </tbody>
