--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
                                  <p>Saya Fadil</p>
                                  <p>Sebenernya saya menunggu tugas kuliah membuat web ,tapi karena tugasnya mungkin masih lama jadi saya bikin ini hanya iseng aja 
                                     . dan web ini berisi tentang diri saya dan beberapa pengetahuan yang saya pelajari di jurusan TEKNOLOGI INFORMASI🖥️
-                                  </p>
+                                  </p>  <p class="font-weight-bolder">every expert was a beginner once, every master was a learner once, so dont be disappointed and never let anyone make you feel less about you</p>
+     
                                   <p></p>
                               </div>
                            </div>
@@ -107,8 +108,7 @@
                </div>
          </div>
       </section>
-      
-      <div  class="banner_main">
+     <div  class="banner_main">
          <div class="container">
             <div class="row">
                <div class="col-md-12">
