--- a/Materi.html
+++ b/Materi.html
@@ -132,7 +132,8 @@
                 
                 <h5> jika ada yang ingin di tanyakan atau mau ngasih saran</h5>
                 
-                <h5>langsung Hubungi Fadil yaa, Via Whatsapp dengan cara <a href="http://wa.me/‪+6289518917844" c> KLIK DISINI </a></h5>
+                <h5>langsung Hubungi Fadil yaa, Via Whatsapp </h5>
+                <h5> <a href="http://wa.me/‪+6289518917844" class="font-weight-bolder">--> Whatsapp <-- </a></h5>
              </div>
           </div>
        </div>
